--- a/About.html
+++ b/About.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="en"><head>
+<html style="font-size: 16px;" lang="sq-AL"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Majee">
-    <meta name="description" content="">
+    <meta name="keywords" content="Marketing, Reklama, Agjenci Reklamimi, Agjenci Marketingu, ">
+    <meta name="description" content="Majee eshte nje agjenci marketingu e cila krijon strategji marketingu edhe promovon biznesin tuaj ne rrjetin e urbaneve ne tirane. ">
     <title>About</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="About.css" media="screen">
@@ -17,39 +17,40 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "",
+		"name": "majee",
 		"logo": "/images/341038808_1279639629302800_612917792683687104_n-removebg-preview1.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="About">
+    <meta property="og:description" content="Majee eshte nje agjenci marketingu e cila krijon strategji marketingu edhe promovon biznesin tuaj ne rrjetin e urbaneve ne tirane. ">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-64d5"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="sq" data-lang-en="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;&quot;,&quot;head-description&quot;:&quot;&quot;}" data-lang-sq="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;&quot;,&quot;head-description&quot;:&quot;&quot;}"><header class="u-clearfix u-header u-header" id="sec-64d5"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="/" class="u-image u-logo u-image-1" data-image-width="366" data-image-height="206" title="home">
           <img src="/images/341038808_1279639629302800_612917792683687104_n-removebg-preview1.png" class="u-logo-image u-logo-image-1">
         </a>
-        <h1 class="u-text u-text-default u-title u-text-1" spellcheck="false">
-          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base u-btn-1" href="/home.html">Majee</a>
+        <h1 class="u-text u-text-default u-title u-text-1" data-lang-en="<a class=&quot;u-active-none u-btn-1 u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base&quot; href=&quot;4631718&quot;>Majee</a>" data-lang-sq="<a class=&quot;u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base u-block-control u-btn-1&quot; href=&quot;4631718&quot; style=&quot;background-image: none; font-size: 2.8125rem; font-weight: 700; font-family: &amp;quot;Averia Sans Libre&amp;quot;; font-style: italic; padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px&quot; data-block=&quot;560&quot;>Majee</a>">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base u-block-control u-btn-1" href="/home.html">Majee</a>
         </h1>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse u-custom-font" style="font-size: 1rem; letter-spacing: 0px; font-family: &quot;Averia Sans Libre&quot;;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" data-lang-en="{&quot;content&quot;:&quot;<svg class=\&quot;u-svg-link\&quot; viewBox=\&quot;0 0 24 24\&quot;><use xlink:href=\&quot;#menu-hamburger\&quot;></use></svg><svg class=\&quot;u-svg-content\&quot; version=\&quot;1.1\&quot; id=\&quot;menu-hamburger\&quot; viewBox=\&quot;0 0 16 16\&quot; x=\&quot;0px\&quot; y=\&quot;0px\&quot; xmlns:xlink=\&quot;http://www.w3.org/1999/xlink\&quot; xmlns=\&quot;http://www.w3.org/2000/svg\&quot;>    <g>        <rect y=\&quot;1\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;7\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;13\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>    </g></svg>&quot;,&quot;href&quot;:&quot;#&quot;}" data-lang-sq="{&quot;content&quot;:&quot;<svg class=\&quot;u-svg-link\&quot; viewBox=\&quot;0 0 24 24\&quot;><use xlink:href=\&quot;#menu-hamburger\&quot;></use></svg><svg class=\&quot;u-svg-content\&quot; version=\&quot;1.1\&quot; id=\&quot;menu-hamburger\&quot; viewBox=\&quot;0 0 16 16\&quot; x=\&quot;0px\&quot; y=\&quot;0px\&quot; xmlns:xlink=\&quot;http://www.w3.org/1999/xlink\&quot; xmlns=\&quot;http://www.w3.org/2000/svg\&quot;>    <g>        <rect y=\&quot;1\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;7\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;13\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>    </g></svg>&quot;,&quot;href&quot;:&quot;#&quot;}">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/home.html" style="padding: 10px 20px;">Kryefaqja</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/Contact.html" style="padding: 10px 20px;">Kontakt</a>
+            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/home.html" style="padding: 10px 20px;" data-lang-en="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}">Kryefaqja</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/Contact.html" style="padding: 10px 20px;" data-lang-en="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}">Kontakt</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/home.html">Kryefaqja</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/Contact.html">Kontakt</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/home.html" data-lang-en="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}">Kryefaqja</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/Contact.html" data-lang-en="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}">Kontakt</a>
 </li></ul>
               </div>
             </div>
@@ -63,7 +64,7 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-4c47"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Majee Shpk. Te drejtat e rezervuara. 2023</p>
+        <p class="u-small-text u-text u-text-variant u-text-1" data-lang-en="Majee Shpk. Te drejtat e rezervuara. 2023" data-lang-sq="Majee Shpk. Te drejtat e rezervuara. 2023">Majee Shpk. Te drejtat e rezervuara. 2023</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
