--- a/en/About.html
+++ b/en/About.html
@@ -2,9 +2,9 @@
 <html style="font-size: 16px;" lang="sq-AL"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <title></title>
+    <meta name="keywords" content="Marketing, Reklama, Agjenci Reklamimi, Agjenci Marketingu, ">
+    <meta name="description" content="Majee eshte nje agjenci marketingu e cila krijon strategji marketingu edhe promovon biznesin tuaj ne rrjetin e urbaneve ne tirane. ">
+    <title>About</title>
     <link rel="stylesheet" href="../nicepage.css" media="screen">
 <link rel="stylesheet" href="../About.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
@@ -25,11 +25,11 @@
     <meta property="og:description" content="Majee eshte nje agjenci marketingu e cila krijon strategji marketingu edhe promovon biznesin tuaj ne rrjetin e urbaneve ne tirane. ">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-64d5"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-64d5"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <a href="/" class="u-image u-logo u-image-1" data-image-width="366" data-image-height="206" title="home">
           <img src="/images/341038808_1279639629302800_612917792683687104_n-removebg-preview1.png" class="u-logo-image u-logo-image-1">
         </a>
-        <h1 class="u-text u-text-default u-title u-text-1"><a class="u-active-none u-btn-1 u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base" href="/en/home.html">Majee</a></h1>
+        <h1 class="u-text u-text-default u-title u-text-1"><a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base u-btn-1" href="/en/home.html" style="background-image: none; font-size: 2.8125rem; font-weight: 700; font-family: &quot;Averia Sans Libre&quot;; font-style: italic; padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px">Majee</a></h1>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse u-custom-font" style="font-size: 1rem; letter-spacing: 0px; font-family: &quot;Averia Sans Libre&quot;;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#"><svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg><svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">    <g>        <rect y="1" width="16" height="2"></rect>        <rect y="7" width="16" height="2"></rect>        <rect y="13" width="16" height="2"></rect>    </g></svg></a>
@@ -57,7 +57,8 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-4c47"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-palette-1-base u-footer" id="sec-4c47"><div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
         <p class="u-small-text u-text u-text-variant u-text-1">Majee Shpk. Te drejtat e rezervuara. 2023</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
