--- a/About.html
+++ b/About.html
@@ -25,12 +25,12 @@
     <meta property="og:description" content="Majee eshte nje agjenci marketingu e cila krijon strategji marketingu edhe promovon biznesin tuaj ne rrjetin e urbaneve ne tirane. ">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-xl-mode" data-lang="sq" data-lang-en="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;&quot;,&quot;head-description&quot;:&quot;&quot;}" data-lang-sq="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;&quot;,&quot;head-description&quot;:&quot;&quot;}"><header class="u-clearfix u-header u-header" id="sec-64d5"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="sq"><header class="u-clearfix u-header u-header" id="sec-64d5"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <a href="/" class="u-image u-logo u-image-1" data-image-width="366" data-image-height="206" title="home">
           <img src="/images/341038808_1279639629302800_612917792683687104_n-removebg-preview1.png" class="u-logo-image u-logo-image-1">
         </a>
-        <h1 class="u-text u-text-default u-title u-text-1" data-lang-en="<a class=&quot;u-active-none u-btn-1 u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base&quot; href=&quot;4631718&quot;>Majee</a>" data-lang-sq="<a class=&quot;u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base u-block-control u-btn-1&quot; href=&quot;4631718&quot; style=&quot;background-image: none; font-size: 2.8125rem; font-weight: 700; font-family: &amp;quot;Averia Sans Libre&amp;quot;; font-style: italic; padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px&quot; data-block=&quot;560&quot;>Majee</a>">
-          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base u-block-control u-btn-1" href="/home.html">Majee</a>
+        <h1 class="u-text u-text-default u-title u-text-1" data-lang-en="<a class=&quot;u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base u-btn-1&quot; href=&quot;4631718&quot; data-lang-en=&quot;{&amp;quot;content&amp;quot;:&amp;quot;Majee&amp;quot;,&amp;quot;href&amp;quot;:&amp;quot;4631718&amp;quot;}&quot; data-lang-sq=&quot;{&amp;quot;content&amp;quot;:&amp;quot;Majee&amp;quot;,&amp;quot;href&amp;quot;:&amp;quot;4631718&amp;quot;}&quot; style=&quot;background-image: none; font-size: 2.8125rem; font-weight: 700; font-family: &amp;quot;Averia Sans Libre&amp;quot;; font-style: italic; padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px&quot;>Majee</a>" data-lang-sq="<a class=&quot;u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base u-block-control u-btn-1&quot; href=&quot;4631718&quot; style=&quot;background-image: none; font-size: 2.8125rem; font-weight: 700; font-family: &amp;quot;Averia Sans Libre&amp;quot;; font-style: italic; padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px&quot; data-block=&quot;560&quot;>Majee</a>">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base u-btn-1" href="/home.html">Majee</a>
         </h1>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse u-custom-font" style="font-size: 1rem; letter-spacing: 0px; font-family: &quot;Averia Sans Libre&quot;;">
@@ -41,8 +41,8 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/home.html" style="padding: 10px 20px;" data-lang-en="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}">Kryefaqja</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/Contact.html" style="padding: 10px 20px;" data-lang-en="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}">Kontakt</a>
+            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/home.html" data-lang-en="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}" style="padding: 10px 20px;">Kryefaqja</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/Contact.html" data-lang-en="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}" style="padding: 10px 20px;">Kontakt</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -63,7 +63,8 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-4c47"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-palette-1-base u-footer" id="sec-4c47"><div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
         <p class="u-small-text u-text u-text-variant u-text-1" data-lang-en="Majee Shpk. Te drejtat e rezervuara. 2023" data-lang-sq="Majee Shpk. Te drejtat e rezervuara. 2023">Majee Shpk. Te drejtat e rezervuara. 2023</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
