--- a/Page-1.html
+++ b/Page-1.html
@@ -29,7 +29,7 @@
     <meta property="og:description" content="Majee eshte nje agjenci marketingu e cila krijon strategji marketingu edhe promovon biznesin tuaj ne rrjetin e urbaneve ne tirane. ">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-xl-mode" data-lang="sq" data-lang-en="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;​Get our all info directly from here, ​Let’s get started, ​What clients value most about us, ​How can we help you right now?&quot;,&quot;head-description&quot;:&quot;&quot;}" data-lang-sq="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;​Get our all info directly from here, ​Let’s get started, ​What clients value most about us, ​How can we help you right now?&quot;,&quot;head-description&quot;:&quot;&quot;}"><header class="u-clearfix u-header u-header" id="sec-64d5"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="sq" data-lang-en="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;​Get our all info directly from here, ​Let’s get started, ​What clients value most about us, ​How can we help you right now?&quot;,&quot;head-description&quot;:&quot;&quot;}" data-lang-sq="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;​Get our all info directly from here, ​Let’s get started, ​What clients value most about us, ​How can we help you right now?&quot;,&quot;head-description&quot;:&quot;&quot;}"><header class="u-clearfix u-header u-header" id="sec-64d5"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <a href="/" class="u-image u-logo u-image-1" data-image-width="366" data-image-height="206" title="home">
           <img src="/images/341038808_1279639629302800_612917792683687104_n-removebg-preview1.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -45,8 +45,8 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/home.html" style="padding: 10px 20px;" data-lang-en="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}">Kryefaqja</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/Contact.html" style="padding: 10px 20px;" data-lang-en="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}">Kontakt</a>
+            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/home.html" data-lang-en="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kryefaqja&quot;,&quot;href&quot;:&quot;/home.html&quot;}" style="padding: 10px 20px;">Kryefaqja</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/Contact.html" data-lang-en="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}" data-lang-sq="{&quot;content&quot;:&quot;Kontakt&quot;,&quot;href&quot;:&quot;/Contact.html&quot;}" style="padding: 10px 20px;">Kontakt</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -243,7 +243,8 @@ c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg></span>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-4c47"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-palette-1-base u-footer" id="sec-4c47"><div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-border-3 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
         <p class="u-small-text u-text u-text-variant u-text-1" data-lang-en="Majee Shpk. Te drejtat e rezervuara. 2023" data-lang-sq="Majee Shpk. Te drejtat e rezervuara. 2023">Majee Shpk. Te drejtat e rezervuara. 2023</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
