--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@ reklamat lokale">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i|Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Averia+Sans+Libre:300,300i,400,400i,700,700i">
 
-
+    <script>
+        if (location.protocol !== 'https:') {
+            location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+        }
+    </script>
 
     <link rel="icon" type="image/png" href="/images/341038808_1279639629302800_612917792683687104_n-removebg-preview1.png"></link>
     <script type="application/ld+json">
