--- a/About.html
+++ b/About.html
@@ -25,7 +25,7 @@
     <meta property="og:description" content="Majee eshte nje agjenci marketingu e cila krijon strategji marketingu edhe promovon biznesin tuaj ne rrjetin e urbaneve ne tirane. ">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body class="u-body u-xl-mode" data-lang="sq"><header class="u-clearfix u-header u-header" id="sec-64d5"><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="sq"><header class="u-clearfix u-header u-header" id="sec-64d5"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="/" class="u-image u-logo u-image-1" data-image-width="366" data-image-height="206" title="home">
           <img src="/images/341038808_1279639629302800_612917792683687104_n-removebg-preview1.png" class="u-logo-image u-logo-image-1">
         </a>
