--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ reklamat lokale">
 
 
 
-    <header class="u-clearfix u-header u-header" style="position: fixed; top: 0; " id="sec-64d5">
-        <div class="u-clearfix u-sheet u-sheet-1">
+    <header class="u-clearfix u-header u-header" style="position: fixed; top: 0; justify-content: center; display: flex;" id="sec-64d5">
+        <div class="u-clearfix u-sheet u-sheet-1" style="background-color: white;">
             <a href="/" class="u-image u-logo u-image-1" data-image-width="366" data-image-height="206" title="home">
                 <img src="/images/341038808_1279639629302800_612917792683687104_n-removebg-preview1.png" class="u-logo-image u-logo-image-1">
             </a>
