--- a/en/Contact.html
+++ b/en/Contact.html
@@ -26,32 +26,38 @@
     <meta property="og:description" content="Majee eshte nje agjenci kreative marketingu e cila krijon strategji marketingu edhe promovon biznesin tuaj ne rrjetin e urbaneve ne tirane. ">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-64d5"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="/" class="u-image u-logo u-image-1" data-image-width="366" data-image-height="206" title="home">
-          <img src="/images/341038808_1279639629302800_612917792683687104_n-removebg-preview1.png" class="u-logo-image u-logo-image-1">
-        </a>
-        <h1 class="u-text u-text-default u-title u-text-1"><a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base u-btn-1" href="/en/home.html" style="background-image: none; font-size: 2.8125rem; font-weight: 700; font-family: &quot;Averia Sans Libre&quot;; font-style: italic; padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px">Majee</a></h1>
-        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
-          <div class="menu-collapse u-custom-font" style="font-size: 1rem; letter-spacing: 0px; font-family: &quot;Averia Sans Libre&quot;;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#"><svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg><svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">    <g>        <rect y="1" width="16" height="2"></rect>        <rect y="7" width="16" height="2"></rect>        <rect y="13" width="16" height="2"></rect>    </g></svg></a>
-          </div>
-          <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/en/home.html" style="padding: 10px 20px;">Kryefaqja</a>
+  <body class="u-body u-xl-mode" data-lang="en"><header class="glas-ui u-clearfix u-custom-color-2 u-header u-sticky u-sticky-e775" id="sec-64d5" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><style class="u-sticky-style" data-style-id="e775">.u-sticky-fixed.u-sticky-e775, .u-body.u-sticky-fixed .u-sticky-e775 {
+box-shadow: 0px 2px 8px 0px rgba(102,102,102,1) !important
+}</style><div class="u-clearfix u-sheet u-sheet-1">
+        <div class="menu-box u-align-center u-container-style u-expanded-width u-group u-shape-rectangle u-group-1">
+          <div class="u-container-layout">
+            <a href="/" class="u-image u-logo u-image-1" data-image-width="366" data-image-height="206" title="home">
+              <img src="/images/341038808_1279639629302800_612917792683687104_n-removebg-preview1.png" class="u-logo-image u-logo-image-1">
+            </a>
+            <h1 class="u-text u-text-default u-title u-text-1"><a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-palette-2-base u-btn-1" href="/en/home.html" style="background-image: none; font-size: 2.8125rem; font-weight: 700; font-family: &quot;Averia Sans Libre&quot;; font-style: italic; padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px">Majee</a></h1>
+            <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
+              <div class="menu-collapse u-custom-font" style="font-size: 1rem; letter-spacing: 0px; font-family: &quot;Averia Sans Libre&quot;;">
+                <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#"><svg class="u-svg-link" viewBox="0 0 24 24"><use xlink:href="#menu-hamburger"></use></svg><svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">    <g>        <rect y="1" width="16" height="2"></rect>        <rect y="7" width="16" height="2"></rect>        <rect y="13" width="16" height="2"></rect>    </g></svg></a>
+              </div>
+              <div class="u-custom-menu u-nav-container">
+                <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/home.html" style="padding: 10px 20px;">Kryefaqja</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-2-light-1 u-text-hover-palette-2-base" href="/en/Contact.html" style="padding: 10px 20px;">Kontakt</a>
 </li></ul>
-          </div>
-          <div class="u-custom-menu u-nav-container-collapse">
-            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-              <div class="u-inner-container-layout u-sidenav-overflow">
-                <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/en/home.html">Kryefaqja</a>
+              </div>
+              <div class="u-custom-menu u-nav-container-collapse">
+                <div class="u-black u-container-style u-expanded-width u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+                  <div class="u-inner-container-layout u-sidenav-overflow">
+                    <div class="u-expanded u-menu-close"></div>
+                    <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/home.html">Kryefaqja</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/en/Contact.html">Kontakt</a>
 </li></ul>
+                  </div>
+                </div>
+                <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
               </div>
-            </div>
-            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+            </nav>
           </div>
-        </nav>
+        </div>
       </div></header>
     <section class="u-align-center u-clearfix u-gradient u-section-1" id="carousel_61c2">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
